GET_USERS_AVERAGE  - update API
